<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View

            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/widgetSpacing"
            android:background="@color/blackColor" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:gravity="center_vertical"

            android:orientation="horizontal">

            <View

                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:background="@color/blackColor" />

            <TextView
                style="@style/billTitleTextStyle"

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="4dp"
                android:layout_weight="0.07"
                android:gravity="center"
                android:text="@string/sn" />

            <View
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@color/blackColor" />

            <TextView
                style="@style/billTitleTextStyle"

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_weight="0.4"
                android:gravity="center_vertical"
                android:text="@string/description" />

            <View
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@color/blackColor" />

            <TextView
                style="@style/billTitleTextStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_weight="0.2"
                android:gravity="center_vertical"
                android:text="@string/mrp" />

            <View

                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@color/blackColor" />

            <TextView
                style="@style/billTitleTextStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_weight="0.15"
                android:gravity="center_vertical"
                android:text="@string/qty" />


            <View
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@color/blackColor" />



            <TextView
                style="@style/billTitleTextStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="@string/amount" />

            <View
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:background="@color/blackColor" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/blackColor" />


    </LinearLayout>
</layout>