<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="@dimen/buttonPadding">

        <TextView
            style="@style/SubHeadingTextStyle"
            android:layout_width="0dp"
            android:layout_weight="0.8"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="CHANGE QUANTITY"
            android:textColor="@android:color/white" />
        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/mainPageMargin"
        android:orientation="vertical"
        android:padding="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                style="@style/SubHeadingTextStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:text="@string/quantity" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_minus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_decrease" />

                <EditText
                    android:background="@drawable/edit_text_background"
                    android:id="@+id/tv_qty"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:inputType="numberDecimal"
                    android:gravity="center"
                    android:text="@string/qty" />

                <ImageView
                    android:id="@+id/iv_plus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_add" />


            </LinearLayout>

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_apply"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/apply" />



            <Button
                android:id="@+id/btn_remove"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mainPageMargin"
                android:layout_weight="0.5"
                android:backgroundTint="@color/alert"
                android:text="Remove" />


        </LinearLayout>

    </LinearLayout>


</LinearLayout>